# openrgd

./: CHANGELOG.md  CLI_GUIDE.md  CONTRIBUTING.md  Dockerfile  ENTHUSIAST.md  GLOSSARIO.md  GUIDE_DOCKER.md  GUIDE_EXPORT.md  GUIDE_IMPORT.md  LAYOUT.md  LICENSE  MAINTENANCE.md  ONBOARDING.md  PLUGIN_GUIDE.md  README.md  SECURITY.md  STRUCTURE.md  package.json  plugins.toml  pyproject.toml  requirements.txt  rgd.spec  run.py
.github/: build.yaml
RGD-ur5/: README.txt  manifest.json
RGD-ur5/spec/: manifest.jsonc  openrgd_unified_spec.jsonc
assets/windows/: setup.bat
export/: isaac_robot_cfg.py  rgd_hardware.xacro  rgd_limits.xacro  ros2_control.yaml
msix/OpenRGD.ShellIntegration/: AppxManifest.xml
my-robots/RGD-ur5/: manifest.json
plugins/rgd_timetravel/: README.md  pyproject.toml
plugins/rgd_timetravel/.rgd_snapshots/: 20251126T012616Z__first_test.marker
plugins/rgd_timetravel/cli.egg-info/: SOURCES.txt
plugins/rgd_timetravel/src/rgd_timetravel/: cli.py
plugins/rgd_timetravel/src/rgd_timetravel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
source/: rgd_schema.jsonc
source/00_core/: kernel.jsonc
source/01_foundation/: actuation_dynamics.jsonc  actuation_topology.jsonc  physics_solver_overrides.jsonc  surface_properties.jsonc
source/03_agency/: divergent_thinking.jsonc  intuition_engine.jsonc  swarm_protocol.jsonc
source/04_volition/: alignment.jsonc  narrative_engine.jsonc  orchestra.jsonc  social_synergy.jsonc
source/05_evolution/: genealogy.jsonc  replication.jsonc
spec/: 01_spec.jsonc  02_spec.jsonc  03_spec.jsonc  04_spec.jsonc  05_spec.jsonc  06_spec.jsonc  openrgd_unified_spec.json  openrgd_unified_spec.jsonc
spec/00_core/: kernel.jsonc
spec/01_foundation/: actuation_topology.jsonc  compute_topology.jsonc  hal_mapping.jsonc  surface_properties.jsonc
spec/02_operation/: oversight_interface.jsonc  psyche_resilience.jsonc  runtime_validation.jsonc
spec/03_agency/: extension_permissions_policy.jsonc  installed_skill_packages.jsonc  presence_engine.jsonc  proprioception_model.jsonc  skills_library.jsonc
spec/04_volition/: alignment.jsonc  coherence_contracts.jsonc  social_synergy.jsonc
spec/05_evolution/: termination.jsonc
src/: cli.py  openrgd.rar
standard/: 01_spec.json  02_spec.json  03_spec.json  04_spec.json  05_spec.json  06_spec.json  manifest.json  openrgd_unified_spec.json  rgd_schema.json
(+176 files in other folders)
