[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openrgd"
version = "0.1.0"
description = "The Cognitive BIOS for Robotics - Standard CLI"
authors = [
  { name = "Pasquale Ranieri", email = "rfc@openrgd.org" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
rgd = "openrgd.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"openrgd" = ["seeds/**/*"]